@@ -1,0 +1,23 @@
+.. aabooks_lib documentation master file, created by
+   sphinx-quickstart on Wed Sep 26 20:42:39 2018.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+Welcome to aabooks_lib's documentation!
+=======================================
+
+.. toctree::
+   :maxdepth: 2
+   :caption: Contents:
+
+   introduction
+   installation
+   configuration
+   
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
